hphp/test/zend/good/ext/mbstring/tests/mb_ereg_match_error1.php.skipif
<?php
extension_loaded('mbstring') or die('skip');
function_exists('mb_ereg_match') or die("skip mb_ereg_match() is not available in this build");
?>