hphp/test/zend/bad/ext/mbstring/tests/mb_strstr_variation2.php.skipif
<?php
extension_loaded('mbstring') or die('skip');
function_exists('mb_strstr') or die("skip mb_strstr() is not available in this build");
?>